Alignment fix--again--my bad

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,12 +3,7 @@ body, html {
   background: url("/images/back.jpg") no-repeat center center fixed;
   background-size: cover;
 }
-.question-head.col.s4{
-  margin-left: 0;
-  margin-right: 30px;
-  padding: 0;
-  width: 265px;
-}
+
 .chip {
   background-color: #de4a3e;
 }
@@ -17,32 +12,12 @@ body, html {
   height: 40px;
   width: 40px;
   background-color: none;
-  padding-top: 2px;
++  padding-top: 2px;
 }
-
-.divider { margin-bottom: 40px; }
-
-.user-links { color: #E53935; }
-.user-links:hover {
-  background: #E53935;
-  color: #fff;
-  padding: 2px 5px;
-  border-radius: 16px;
-}
-
-.link-btn {
-  background: #fff;
-  opacity: 0.9;
-  line-height: 50px;
-}
-.link-btn a { color: #E53935; }
-
-.link-btn:hover { background: #E53935; }
-.link-btn a:hover { color: #fff; }
-
 
 .dank {
-  margin-top: 5px;
+-  margin-top: 3px;
++  margin-top: 5px;
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -110,7 +85,7 @@ body, html {
 .title {
   color: black;
   margin: auto;
-  width: 400px;
+  width: 350px;
   background-color: white;
   font-size: 25px;
   height: 50px;
@@ -169,7 +144,7 @@ body, html {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  padding-left: 20px;
+  padding-left: 5px;
   text-align: left;
   color: black;
 }
@@ -191,7 +166,7 @@ body, html {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  padding-left: 15px;
+  padding-left: 11px;
   text-align: left;
   color: black;
 }
@@ -241,20 +216,6 @@ input[type=text]:focus:not([readonly])+label, input[type="password"]:focus:not([
   color: #de4a3e;
 }
 
-textarea[type=text]:focus:not([readonly]), input[type="password"]:focus:not([readonly]) {
-  border-bottom: 1px solid #de4a3e;
-  box-shadow: 0 1px 0 0 #de4a3e;
-}
-
-textarea[type=text]:focus:not([readonly])+label, input[type="password"]:focus:not([readonly])+label {
-  color: #de4a3e;
-}
-
-
-.select-wrapper li span{
-  color: #de4a3e;
-}
-
 .submit-question-div {
   text-align: center;
 }
@@ -280,6 +241,8 @@ margin-top: 10px;
   margin-top: 10px;
 }
 
+.divider { margin-bottom: 40px; }
+
 .created-by {
   background: #fff;
   font-size: 14px;
@@ -290,65 +253,20 @@ margin-top: 10px;
   padding: 15px !important;
 }
 
-/** MEDIA QUERIES **/
-@media only screen and (max-device-width: 1280px) {
-  .brand-logo b i {
-    font-size: 23px;
-    margin-right: 150px;
-  }
-  nav ul a { font-size: 12px; }
-  a.btn { padding: 0 10px; }
-
-  .question-head.col.s4 {
-    width: 197px;
-    margin-left: 0;
-    margin-right: 30px;
-   }
-  .category {
-    font-size: 14px;
-    width: 120px;
-   }
-
-  .title {
-    font-size: 20px;
-    width: 360px;
-  }
-
-  .expiration {
-    min-width: 200px;
-    margin-left: 10px;
-   }
-
-  .created-by { width: 260px; }
+.user-links { color: #E53935; }
+.user-links:hover {
+  background: #E53935;
+  color: #fff;
+  padding: 2px 5px;
+  border-radius: 16px;
 }
 
-@media only screen and (max-width: 1280px) {
-  .brand-logo b i {
-    font-size: 23px;
-    margin-right: 150px;
-  }
-  nav ul a { font-size: 12px; }
-  a.btn { padding: 0 10px; }
-
-  .question-head.col.s4 {
-    width: 197px;
-    margin-left: 0;
-    margin-right: 30px;
-   }
-  .category {
-    font-size: 14px;
-    width: 120px;
-   }
-
-  .title {
-    font-size: 20px;
-    width: 360px;
-  }
-
-  .expiration {
-    min-width: 200px;
-    margin-left: 10px;
-   }
-
-  .created-by { width: 260px; }
+.link-btn {
+  background: #fff;
+  opacity: 0.9;
+  line-height: 50px;
 }
+.link-btn a { color: #E53935; }
+
+.link-btn:hover { background: #E53935; }
+.link-btn a:hover { color: #fff; }
